[package]
name = "stream_router"
version = "0.0.1"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE"
description = "A Future aware router to dynamically route between Streams and Sinks"

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = {version = "0.2", features = ["full"]}
