[package]
name = "stream_router"
version = "0.1.0"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/BroderickCarlin/stream_router"
description = "A Future aware router to dynamically route between Streams and Sinks"
documentation = "https://docs.rs/stream_router/0.1.0/stream_router/"
keywords = ["async", "futures", "tokio", "stream"]
categories = ["asynchronous", "rust-patterns"]

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = {version = "0.2", features = ["full"]}
num_stream = "0.1"
futures-test = "0.3"
